@@ -1,28 +1,33 @@
 package com.neptune2.couchbase_api.service;
 
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.neptune2.couchbase_api.model.Payment;
 import com.neptune2.couchbase_api.model.Ticket;
-import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.client.RestTemplate;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
+import com.neptune2.couchbase_api.model.TicketReponse;
 
-import java.time.LocalDate;
-import java.time.LocalTime;
-import java.util.Arrays;
-import java.util.HashMap;
+import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestTemplate;
+import org.springframework.http.*;
+import org.springframework.beans.factory.annotation.Value;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
+import java.util.stream.Collectors;
+import java.util.HashMap;
 
 @Service
 public class TicketService {
 
-    @Value("${innovorder.api.url}") // configurable dans application.properties
+    private static final Logger log = LoggerFactory.getLogger(TicketService.class);
+
+    @Value("${innovorder.api.url}")
     String externalApiUrl;
 
     @Value("${innovorder.api.auth.url}")
-    private String authUrl; // ex: https://api-dev.innovorder.fr/oauth/login
+    private String authUrl;
 
     @Value("${innovorder.api.username}")
     private String username;
@@ -38,6 +43,7 @@ public class TicketService {
 
     final RestTemplate restTemplate = new RestTemplate();
 
+    // ---------------- TOKEN ----------------
     private String getAccessToken() {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
@@ -57,33 +63,87 @@ public class TicketService {
         throw new RuntimeException("Impossible de récupérer le token OAuth : " + response.getStatusCode());
     }
 
-    // ✅ GET : lire tous les tickets
-    @GetMapping
-    public List<Ticket> getRepositoryTickets(String dateVoyage, String codeLigne, String heureDepart,
-            String caisse) {
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    private static class ApiResponse {
+        public Data data;
+
+        @JsonIgnoreProperties(ignoreUnknown = true)
+        public static class Data {
+            public List<Ticket> omnichannelOrders;
+        }
+    }
+
+    public TicketReponse getRepositoryTickets(String dateVoyage, String codeLigne, String heureDepart,
+            String caisse,
+            String startDate, String endDate) {
 
         String token = getAccessToken();
-
-        // Construction de l’URL avec les paramètres
-        // String url = String.format("%s?dateVoyage=%s", externalApiUrl, dateVoyage);
         String url = String.format("%s?restaurantIds=1286", externalApiUrl);
-        /*
-         * if (codeLigne != null && !codeLigne.isEmpty())
-         * url += "&codeLigne=" + codeLigne;
-         * if (heureDepart != null)
-         * url += "&heureDepart=" + heureDepart;
-         * 
-         * if (caisse != null && !caisse.isEmpty())
-         * url += "&caisse=" + caisse;
-         */
+        if (startDate != null && endDate != null) {
+            url += String.format("&startDate=%s&endDate=%s", startDate, endDate);
+        }
         HttpHeaders headers = new HttpHeaders();
         headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         headers.setBearerAuth(token);
+
         HttpEntity<Void> request = new HttpEntity<>(headers);
 
-        ResponseEntity<Ticket[]> response = restTemplate.exchange(
-                url, HttpMethod.GET, request, Ticket[].class);
+        log.info("➡ Appel API Innovorder");
+        log.info("URL : {}", url);
 
-        return Arrays.asList(Objects.requireNonNull(response.getBody()));
+        try {
+            ResponseEntity<String> rawResponse = restTemplate.exchange(url, HttpMethod.GET, request, String.class);
+
+            log.info(" Réponse brute JSON = {}", rawResponse.getBody());
+
+            ObjectMapper mapper = new ObjectMapper();
+            ApiResponse response = mapper.readValue(rawResponse.getBody(), ApiResponse.class);
+
+            List<Ticket> tickets = (response != null && response.data != null)
+                    ? response.data.omnichannelOrders
+                    : List.of();
+
+            for (Ticket t : tickets) {
+                if (t.getRestaurant() != null && t.getRestaurant().getName() != null) {
+                    t.setRestaurantName(t.getRestaurant().getName());
+                }
+            }
+
+            double total = calculategetTotalPriceDiscountedWithTaxIncluded(tickets);
+
+            Map<String, Double> totalByPayment = calculateTotalsByPayment(tickets);
+
+            
+            return new TicketReponse(tickets, total, totalByPayment);
+
+        } catch (Exception e) {
+            log.error("❌ Erreur REST: {}", e.getMessage(), e);
+          return new TicketReponse(List.of(), 0, Map.of());
+        }
     }
+
+    public double calculategetTotalPriceDiscountedWithTaxIncluded(List<Ticket> tickets) {
+        return tickets.stream()
+                .mapToDouble(t -> t.getTotalPriceDiscountedWithTaxIncluded() != null
+                        ? t.getTotalPriceDiscountedWithTaxIncluded()
+                        : 0)
+                .sum();
+    }
+
+    public Map<String, Double> calculateTotalsByPayment(List<Ticket> tickets) {
+        Map<String, Double> totals = new HashMap<>();
+
+        for (Ticket ticket : tickets) {
+            if (ticket.getPayments() == null)
+                continue;
+
+            for (Payment p : ticket.getPayments()) {
+                double value = p.getValue() != null ? p.getValue() : 0;
+                totals.merge(p.getType(), value, Double::sum);
+            }
+        }
+
+        return totals;
+    }
+
 }
